# strojove-uceni

./: .gitignore  README.md
airline-fares/: README.md  requirements.txt
airline-fares/fare_analysis/: __main__.py  aircraft.py  airport.py  analysis.py  flight.py  sample.py
apriori/: apriori.py  main.py
classification/: classification.ipynb
clustering/: su_cv5_sklearn_clustering.ipynb
clustering/hierarchical-clustering/plotting/: plot.py
clustering/hierarchical-clustering/src/main/scala/org/fpeterek/su/clustering/: Clustering.scala  DatasetLoader.scala  JsonWriter.scala
decision-trees/: README.md  decisiontrees.cabal
decision-trees/scripts/: plot.py  preprocess.py
decision-trees/src/: dt.hs
dimension_reduction/: su_cv6_sklearn_dimension_reduction_template.ipynb
eda/: su_cv2_eda.ipynb
eda2/: su_cv3_eda_individual.ipynb
ensemble-methods/: ensemble_methods.ipynb
football-performance/: README.md  requirements.txt
football-performance/analysis/: __main__.py  analysis.py
hierarchical-clustering/: build.gradle  settings.gradle
hierarchical-clustering/src/main/scala/org/fpeterek/su/clustering/: Cluster.scala  Clustering.scala  DatasetLoader.scala  Linkage.scala  Main.scala  Point.scala
hierarchical-clustering/src/main/scala/org/fpeterek/su/clustering/distance/: DistanceMetric.scala  Distances.scala
insurance-claims/: README.md  out.txt  requirements.txt
insurance-claims/classification/: __main__.py  every_other.py  preprocessing.py  run.py
(+3 files in other folders)
